# konsul-pajak-app

./: .gitignore  DEPLOYMENT.md  build-and-push.bat  combined_regulations_with_urls.csv  desktop.ini  docker-compose.yml
.github/workflows/: docker-build.yml
konsul-pajak-App/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  test-db.ts  tsconfig.json
konsul-pajak-App/prisma/: schema.prisma  seed-admin.ts  seed-peraturan-csv.ts  seed-peraturan.ts  uu.json
konsul-pajak-App/prisma/migrations/20241120_initial/: migration.sql
konsul-pajak-App/prisma/migrations/20250505_add_peraturan/: migration.sql
konsul-pajak-App/src/: env.ts
konsul-pajak-App/src/app/: layout.tsx  page.tsx
konsul-pajak-App/src/components/: admin-layout.tsx  brand-text.tsx  chat-message.tsx  credits-exhausted-modal.tsx  otp-input.tsx  providers.tsx  public-header.tsx  signup-prompt.tsx
konsul-pajak-App/src/lib/: email.ts  otp.ts
konsul-pajak-App/src/server/: db.ts
konsul-pajak-App/src/styles/: globals.css
konsul-pajak-App/src/trpc/: react.tsx
konsul-pajak-App/src/utils/: sample.test.ts  useTypewriter.ts
konsul-pajak-frontend/: package-lock.json  package.json  tsconfig.json
konsul-pajak-frontend/prisma/: schema.prisma
konsul-pajak-frontend/src/app/: layout.tsx  page.tsx
konsul-pajak-frontend/src/trpc/: server.ts
konsul-pajak-preprocessing-data/: docker-compose.yml  get_all_chunks.py  pyproject.toml
konsul-pajak-preprocessing-data/data/: TEMPLATE_EXAMPLE.md
konsul-pajak-preprocessing-data/src/: create_database.py  query_data.py
(+34 files in other folders)
